organization-service/org_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
      - name: organization
        image: sunnymakhija84/organization
        ports:
        - containerPort: 8090
